--- a/templates/teachersBase.html
+++ b/templates/teachersBase.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
+
    <style>
               .row-setting{
     margin:80px 0px !important;
@@ -146,7 +147,7 @@ width: 90px;
 
 
      <!--row 2 -->
-   <h1 style="margin-top:200px; text-align:center;">Services</h1>
+   <h1 style="text-align:center;">Services</h1>
 <div class="row  text-center row-setting">
     <div class="col-sm-4 col-md-4 d-block m-auto">
         <div class="imgsetting d-block m-auto bg-warning">
