--- a/static/css/publicfile.css
+++ b/static/css/publicfile.css
@@ -1,7 +1,9 @@
+
 body{
-	
+
 	background-color :#F8F8FF;
 }
+
 .col-sm-10{
 	background-color:#ffffff;
 }
@@ -168,6 +170,11 @@ body{
     margin:80px 0px !important;
 }
 
-
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+}
 
 
