--- a/templates/home/readMore.html
+++ b/templates/home/readMore.html
@@ -1,10 +1,195 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+{% load static %}
+
+
+{% block title  %} home  {% endblock title %}
+{% block hactive %}active{% endblock hactive %}
+
+
+
+ {% block body %}
+
+
+<!--row-1--->
+
+    <div class="row">
+
+        <!--col-1-->
+   <div class="col-sm-8">
+
+
+
+          <div class="card pt-4 pl-4 pb-4 pr-4">
+
+                     {% if post.postImage %}
+                    <img src="{{post.postImage.url }} " class="img-fluid img-thumbnail img-rounded"
+
+                        alt="Responsive image">
+ {% endif %}
+                    <div class="card-body">
+                        <div class="card-title">
+
+                            <h5 class="card-title post-title"> {{ post.postTitle }} </h5>
+                            <h6 class="post-category">Category : {{post.category}}
+                                published on</h6>
+                            <p class="post-time ">
+                                {{ post.postTimeDate }}
+                            </p>
+                            <div class="post-time mb-5">
+                                <p class="post">Author : {{ post.postAuthor |truncatewords:2 }}</p>
+
+                            </div>
+                            <div class="card-text">
+                                <p class="post">{{ post.postText  | safe | linebreaks }}</p>
+
+                            </div>
+
+                        </div>                        </div>
+
+
+                    </div>
+
+
+
+
+       <div style="margin-top:50px;">
+
+       </div>
+
+
+
+       <!-- col-1 ending-->
+       </div>
+
+
+
+
+
+
+
+
+<!-- col-2 start-->
+
+
+        <div class="col-sm-3 ml-lg-5" >
+
+            <!--about me-->
+
+          <div class="card text-center ">
+                    <h6>About Me</h6>
+<div class="card card-cascade">
+
+  <!-- Card image -->
+  <div class="view view-cascade overlay">
+    <img class="card-img-top rounded-circle pl-5 pr-5 pt-3" src="{% static 'aya.jpeg' %}" alt="Card image cap">
+    <a>
+      <div class="mask rgba-white-slight"></div>
+    </a>
+  </div>
+
+  <!-- Card content -->
+  <div class="card-body card-body-cascade text-center">
+
+    <!-- Title -->
+    <h4 class="card-title"><strong>Azizur Rahman Chowdhury Ayan</strong></h4>
+    <!-- Subtitle -->
+    <h6 class="font-weight-bold indigo-text py-2">Web developer</h6>
+    <!-- Text -->
+    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae.
+      Facere modi sunt, quod quibusdam.
+    </p>
+
+    <!-- Facebook -->
+    <a type="button" class="btn-floating btn-small btn-fb"><i class="fab fa-facebook-f"></i></a>
+    <!-- Twitter -->
+    <a type="button" class="btn-floating btn-small btn-tw"><i class="fab fa-twitter"></i></a>
+    <!-- Google + -->
+    <a type="button" class="btn-floating btn-small btn-dribbble"><i class="fab fa-dribbble"></i></a>
+
+  </div>
+
+</div>
+              <!--ending of about me-->
+                </div>
+
+
+
+
+                 <div class="card mt-5">
+                    <div class="card-header pl-2 pt-2 card-titles">
+                        <h6>Category</h6>
+                    </div>
+                    <!-- to add category-->
+                    <div class="card-body">
+                          {% for post in Categories %}
+
+                        <a href="#">
+                            <span id="heading"> {{ post.category }} </span>
+                        </a><br>
+                           {% endfor %}
+
+                    </div>
+                </div>
+
+
+
+
+
+
+
+
+
+
+  <!--recent post-->
+
+
+ <div class="card mt-5">
+                    <div class="card-header pl-2 pt-2 card-titles">
+                        <h6>Recent Posts</h6>
+                    </div>
+                    <div class="card-body">
+
+                        <div class="mt-3">
+                             {% for post in RecentPost%}
+
+                            <img style="float:left;" class="d-inline-block" src="{{ post.get_photo_url }}" height=80;
+                                width=80; alt="abc">
+
+
+                            <a href="#">
+                                <p  style="margin-left:90px;" id="heading">
+                                    {{ post.postTitle |truncatewords:2 }}
+                                </p>
+                            </a>
+
+
+                            <p style="margin-left:100px; margin-top:-10px;" class="description">{{ post.postTimeDate }}</p>
+
+                            <br>
+                             {% endfor %}
+                        </div>
+
+
+
+                    </div>
+
+                </div>
+
+
+
+
+
+
+        </div>
+
+
+</div>
+
+
+
+
+
+
+
+
+ {% endblock body %}
