--- a/templates/home/search.html
+++ b/templates/home/search.html
@@ -17,10 +17,10 @@
         <!--col-1-->
    <div class="col-sm-8">
 
-    {% for post in Posts %}
+       <h2 class="mb-4">Search Results:</h2>
 
+    {% for post in allPosts %}
 
-       {%  if not post.postUrl %}
 
 
 
@@ -28,85 +28,53 @@
 
        <div class="card pt-4 pl-4 pb-4 pr-4">
 
-                     {% if post.postImage %}
-                    <img src="{{ post.postImage.url }} " class="img-fluid img-thumbnail img-rounded"
 
-                        alt="Responsive image">
- {% endif %}
                     <div class="card-body">
-                        <div class="card-title">
 
-                            <h5 class="card-title post-title"> {{ post.postTitle }} </h5>
-                            <h6 class="post-category">Category : {{post.category}}
-                                published on</h6>
-                            <p class="post-time ">
-                                {{ post.postTimeDate }}
-                            </p>
-                            <div class="post-time mb-5">
-                                <p class="post">Author : {{ post.postAuthor |truncatewords:2 }}</p>
+                        <div class="mt-3">
 
-                            </div>
-                            <div class="card-text">
-                                <p class="post">{{ post.postText |truncatewords:40 }}</p>
-
-                            </div>
-
-                        </div>                        </div>
-
-                             <a href="{{ post.postId }}"> <span class="btn btn-primary">Read More &rsaquo;</span></a>
-
-                    </div>
+                            <img style="float:left;" class="d-inline-block" src="{{ post.get_photo_url }}" height=80;
+                                width=80; alt="abc">
 
 
-       <div style="margin-top:60px;">
+                            <a href="{% url 'readMore' post.postId %}">
 
-       </div>
-
-
-
-
-     {% else %}
+                                <p  style="margin-left:100px;">
+                                    {{ post.postText |truncatewords:30 }}
+                                </p>
+                            </a>
 
 
-        <div class="card pt-4 pl-4 pb-4 pr-4 ">
-                   {% if post.postImage %}
-                    <img src="{{ post.postImage.url }} " class="img-fluid img-thumbnail img-rounded"
-                        alt="Responsive image">
-                      {% endif %}
-                    <div class="card-body">
-                        <div class="card-title">
-
-                            <h5 class="card-title post-title"> {{ post.postTitle }} </h5>
-
-                            <h6 class="post-category">Category : {{post.category}}
-                                published on</h6>
-                            <p class="post-time">
-                                {{ post.postTimeDate }}
-                            </p>
-
-                             <div class="post-time mb-5">
-                                <p class="post">Author : {{ post.postAuthor |truncatewords:2 }}</p>
-
-                            </div>
-                            <div class="card-text">
-                                <p class="post">{{ post.postText |truncatewords:40 }}</p>
-
-                            </div>
-
+                            <p style="margin-left:100px; margin-top:-10px;" class="description">{{ post.postTimeDate }}</p>
 
 
                         </div>
-                             <a href="{{ post.postId }}"><span class="btn btn-primary">Read More &rsaquo;</span></a>
+
 
 
                     </div>
-                </div>
-<div style="margin-top:60px;">
+
+
+
+
+
+
+
+        </div>
+
+       <div style="margin-top:50px;">
 
        </div>
 
-{% endif %}
-{% endfor %}
+
+       {% endfor %}
+
+
+
+
+
+
+
 
 
 
@@ -249,7 +217,7 @@
                                 width=80; alt="abc">
 
 
-                            <a href="{{ post.postId }}">
+                            <a href="#">
                                 <p  style="margin-left:90px;" id="heading">
                                     {{ post.postTitle |truncatewords:2 }}
                                 </p>
