--- a/templates/base.html
+++ b/templates/base.html
@@ -152,7 +152,7 @@ width: 90px;
 
          <h2>Information</h2>
                 <p>
-                    this website is good
+                    through this website you will get all information of MU cse44th
                 </p>
 
 
@@ -160,13 +160,13 @@ width: 90px;
 
      <div class="col-sm-4">
          <div class="imgsetting d-block m-auto bg-warning">
-            <i class="fa fa-shopping-cart fa-3x text-white mt-4"></i>
+            <i class="fa fa-keyboard-o fa-3x text-white mt-4"></i>
 
         </div>
 
          <h2>Learning</h2>
                 <p>
-                    this website is good
+                    You can learn through this website
                 </p>
 
 
@@ -174,13 +174,13 @@ width: 90px;
 
      <div class="col-sm-4">
         <div class="imgsetting d-block m-auto bg-warning">
-            <i class="fa fa-shopping-cart fa-3x text-white mt-4"></i>
+            <i class="fa fa-stack-exchange fa-3x text-white mt-4"></i>
 
         </div>
 
-         <h2>E-commarce</h2>
+         <h2>Ex-change</h2>
                 <p>
-                    this website is good
+                    Exchange your idea
                 </p>
 
 
