--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -2,146 +2,68 @@
 {% load static %}
 
 
+
 {% block title  %} home  {% endblock title %}
-{% block hactive %}active{% endblock hactive %}
-
-
+{% block contactactive %}active{% endblock contactactive %}
 
  {% block body %}
 
 
+
 <div class="row ml-1 mb-1">
-    <h2 class="mb-3">Search Results</h2>
+    <h2 class="mb-3">Contact Us</h2>
 
 </div>
+<div class="row">
 
+ <div class="col-sm-8 mb-5">
 
-<!--row-1--->
+     <div class="card pl-5  pr-5  pt-5 pb-5">
 
-    <div class="row">
 
-        <!--col-1-->
-   <div class="col-sm-8">
 
+<form action="{% url 'contact' %}" method="post" class="was-validated">
+    {% csrf_token %}
 
-    {% for post in allPosts %}
+  <div class="form-group">
+    <label for="uname">Username:</label>
+    <input type="text" class="form-control" id="uname" placeholder="Enter username" name="uname" required>
+    <div class="valid-feedback">Valid.</div>
+    <div class="invalid-feedback">Please fill out this field.</div>
 
+  </div>
+  <div class="form-group">
+    <label for="email">Email:</label>
+    <input type="email" class="form-control" id="pwd" placeholder="Enter password" name="email" required>
+    <div class="valid-feedback">Valid.</div>
+    <div class="invalid-feedback">Please fill out this field.</div>
+  </div>
 
 
+ <div class="form-group">
+    <label for="text">Tell us:</label>
+  <textarea class="form-control" id="txt" name="text" required></textarea>
+  <div class="valid-feedback">Valid.</div>
+    <div class="invalid-feedback">Please fill out this field.</div>
+  </div>
 
 
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 
-       <div class="card pt-4 pl-4 pb-4 pr-4">
 
+     </div>
 
-                    <div class="card-body">
+ </div>
 
-                        <div class="mt-3">
 
-                            <img style="float:left;" class="d-inline-block" src="{{ post.get_photo_url }}" height=80;
-                                width=80; alt="abc">
 
 
-                            <a href="{% url 'readMore' post.postId %}">
-
-                                <p  style="margin-left:100px;">
-                                    {{ post.postText |truncatewords:30 }}
-                                </p>
-                            </a>
-
-
-                            <p style="margin-left:100px; margin-top:-10px;" class="description">{{ post.postTimeDate }}</p>
-
-
-                        </div>
-
-
-
-                    </div>
-
-
-
-
-
-
-
-        </div>
-
-       <div style="margin-top:50px;">
-
-       </div>
-
-
-       {% endfor %}
-
-
-
-
-
-
-
-
-
-
-       <nav aria-label="Page navigation example">
-
-       {% if Posts.has_other_pages %}
-  <ul class="pagination">
-    {% if Posts.has_previous %}
-
-      <li class="page-item disabled">
-      <a class="page-link" href="?page={{ Posts.previous_page_number }}" tabindex="-1">Previous</a>
-    </li>
-
-    {% else %}
-        <li class="page-item disabled">
-      <a class="page-link" href="#" tabindex="-1">Previous</a>
-    </li>
-    {% endif %}
-    {% for i in Posts.paginator.page_range %}
-      {% if Posts.number == i %}
-
-      <li class="page-item active">
-      <a class="page-link" href="#">{{ i }} <span class="sr-only">(current)</span></a>
-    </li>
-      {% else %}
-      <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-      {% endif %}
-    {% endfor %}
-    {% if Posts.has_next %}
-       <li class="page-item">
-      <a class="page-link" href="?page={{ Posts.next_page_number }}">Next</a>
-    </li>
-    {% else %}
-      <li class="page-item disabled">
-      <a class="page-link" href="#" tabindex="-1">Next</a>
-    </li>
-    {% endif %}
-  </ul>
-{% endif %}
-
-
-</nav>
-
-
-       <!-- col-1 ending-->
-       </div>
-
-
-
-
-
-
-
-
-<!-- col-2 start-->
-
-
-        <div class="col-sm-3 ml-lg-5" >
+       <div class="col-sm-3 ml-lg-5" >
 
             <!--about me-->
 
-            <div class="card text-center ">
+          <div class="card text-center ">
                     <h6>About Me</h6>
 <div class="card card-cascade">
 
@@ -180,7 +102,6 @@
 </div>
               <!--ending of about me-->
                 </div>
-
 
 
 
@@ -226,7 +147,7 @@
                                 width=80; alt="abc">
 
 
-                            <a href="#">
+                            <a href="{{ post.postId }}">
                                 <p  style="margin-left:90px;" id="heading">
                                     {{ post.postTitle |truncatewords:2 }}
                                 </p>
@@ -253,13 +174,10 @@
         </div>
 
 
+
 </div>
 
 
 
 
-
-
-
-
- {% endblock body %}
+{% endblock body %}
