--- a/templates/base.html
+++ b/templates/base.html
@@ -114,7 +114,7 @@ width: 90px;
                         <li class="nav-item dropdown  ">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            welcome {{request.user}}
+                            welcome {{request.user.username}}
                         </a>
                         <div class="dropdown-menu edit-dropdown " aria-labelledby="navbarDropdown">
 
@@ -254,7 +254,7 @@ width: 90px;
 
         </div>
 
-         <h2>Ex-change</h2>
+         <h2>Sharing</h2>
                 <p>
                     Exchange your idea
                 </p>
