--- a/templates/teachers/logIn.html
+++ b/templates/teachers/logIn.html
@@ -3,6 +3,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/publicfile.css' %} ">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -13,31 +19,42 @@
 <body>
 
 
+<div class="container p-5">
 
-<div class="sidenav">
-         <div class="login-main-text">
-            <h2>Application<br> Login Page</h2>
-            <p>Login or register from here to access.</p>
-         </div>
-      </div>
-      <div class="main">
-         <div class="col-md-6 col-sm-12">
-            <div class="login-form">
-               <form>
-                  <div class="form-group">
-                     <label>User Name</label>
-                     <input type="text" class="form-control" placeholder="User Name">
-                  </div>
-                  <div class="form-group">
-                     <label>Password</label>
-                     <input type="password" class="form-control" placeholder="Password">
-                  </div>
-                  <button type="submit" class="btn btn-black">Login</button>
-                  <button type="submit" class="btn btn-secondary">Register</button>
-               </form>
-            </div>
-         </div>
-      </div>
+<h1 style="text-align:center;">Welcome To MU  CSE44th Teachers panel </h1>
+
+<h2 class="mt-5">Login</h2>
+<form method="post">{% csrf_token %}
+     {% csrf_token %}
+	{% for field in login_form %}
+		<p>
+			{{field.label_tag}}
+			{{field}}
+
+			{% if field.help_text %}
+				<small style="color: grey;">{{field.help_text}}</small>
+			{% endif %}
+
+		</p>
+	{% endfor %}
+
+	{% for field in login_form %}
+		{% for error in field.errors %}
+			<p style="color: red;">{{error}}</p>
+		{% endfor %}
+	{% endfor %}
+
+	{% if login_form.non_field_errors %}
+		<div style="color:red;">
+			<p>{{login_form.non_field_errors}}</p>
+		</div>
+	{% endif %}
+	<button class="btn btn-primary" type="submit">Log in</button>
+
+</form>
+
+</div>
+
 
 </body>
 </html>
