--- a/templates/home/readMore.html
+++ b/templates/home/readMore.html
@@ -93,18 +93,21 @@
     <!-- Title -->
     <h4 class="card-title"><strong>Azizur Rahman Chowdhury Ayan</strong></h4>
     <!-- Subtitle -->
-    <h6 class="font-weight-bold indigo-text py-2">Web developer</h6>
+    <h6 class="font-weight-bold indigo-text py-2">Student of metrpolitan University</h6>
     <!-- Text -->
-    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae.
-      Facere modi sunt, quod quibusdam.
+    <p class="card-text">Right now, I am doing cse from MU
     </p>
 
     <!-- Facebook -->
-    <a type="button" class="btn-floating btn-small btn-fb"><i class="fab fa-facebook-f"></i></a>
+    <a href="https://www.linkedin.com/in/azizur-rahman-720636165"  class="btn-floating btn-small btn-fb"><i class="fa fa-linkedin-square
+
+"></i></a>
     <!-- Twitter -->
-    <a type="button" class="btn-floating btn-small btn-tw"><i class="fab fa-twitter"></i></a>
+    <a href="https://www.facebook.com/imayanchy/" class="btn-floating btn-small btn-tw" style="padding:10px;"><i class="fa fa-facebook-square
+
+"></i></a>
     <!-- Google + -->
-    <a type="button" class="btn-floating btn-small btn-dribbble"><i class="fab fa-dribbble"></i></a>
+    <a href="mailto:aaziz9642@gmail.com"  class="btn-floating btn-small btn-dribbble"><i class="fa fa-envelope-o"></i></a>
 
   </div>
 
