--- a/templates/teachersBase.html
+++ b/templates/teachersBase.html
@@ -169,18 +169,22 @@ width: 90px;
 
 
 
-     <!--row 2 -->
-   <h1 style="text-align:center;">Services</h1>
+
+      <!--row 2 -->
+     <div style="margin-top:200px">
+
+     </div>
+   <h1 style="text-align:center; font-weight:bold;">Services</h1>
 <div class="row  text-center row-setting">
     <div class="col-sm-4 col-md-4 d-block m-auto">
         <div class="imgsetting d-block m-auto bg-warning">
-            <i class="fa fa-shopping-cart fa-3x text-white mt-4"></i>
+            <i class="fa fa-id-card fa-3x text-white mt-4"></i>
 
         </div>
 
-         <h2>E-commarce</h2>
+         <h2>Information</h2>
                 <p>
-                    this website is good
+                    through this website you will get all information of MU cse44th
                 </p>
 
 
@@ -188,13 +192,13 @@ width: 90px;
 
      <div class="col-sm-4">
          <div class="imgsetting d-block m-auto bg-warning">
-            <i class="fa fa-shopping-cart fa-3x text-white mt-4"></i>
+            <i class="fa fa-keyboard-o fa-3x text-white mt-4"></i>
 
         </div>
 
-         <h2>E-commarce</h2>
+         <h2>Learning</h2>
                 <p>
-                    this website is good
+                    You can learn through this website
                 </p>
 
 
@@ -202,13 +206,13 @@ width: 90px;
 
      <div class="col-sm-4">
         <div class="imgsetting d-block m-auto bg-warning">
-            <i class="fa fa-shopping-cart fa-3x text-white mt-4"></i>
+            <i class="fa fa-stack-exchange fa-3x text-white mt-4"></i>
 
         </div>
 
-         <h2>E-commarce</h2>
+         <h2>Sharing</h2>
                 <p>
-                    this website is good
+                    You can share your idea through this website
                 </p>
 
 
@@ -220,6 +224,8 @@ width: 90px;
 
 
 </div>
+
+
 
 
 
