--- a/templates/base.html
+++ b/templates/base.html
@@ -101,7 +101,7 @@ width: 90px;
 
 
                     <li class="nav-item pl-lg-3 pr-lg-3" id="{% block aboutactive %}{% endblock aboutactive %}">
-                        <a class="nav-link" href="/about">About Me</a>
+                        <a class="nav-link" href="{% url 'aboutMe' %}">About Me</a>
                     </li>
                     <li class="nav-item pl-lg-3 pr-lg-3" id="{% block contactactive %}{% endblock contactactive %}">
                         <a class="nav-link" href="/contact">Contact Us</a>
@@ -256,7 +256,7 @@ width: 90px;
 
          <h2>Sharing</h2>
                 <p>
-                    Exchange your idea
+                    You can share your idea through this website
                 </p>
 
 
