--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -21,35 +21,31 @@
      <div class="card pl-5  pr-5  pt-5 pb-5">
 
 
+           <form action="{% url 'addPost' %}" method="post">
+                {% csrf_token %}
+   {%for f in form %}
 
-<form action="{% url 'contact' %}" method="post" class="was-validated">
-    {% csrf_token %}
-
-  <div class="form-group">
-    <label for="uname">Username:</label>
-    <input type="text" class="form-control" id="uname" placeholder="Enter username" name="uname" required>
-    <div class="valid-feedback">Valid.</div>
-    <div class="invalid-feedback">Please fill out this field.</div>
-
-  </div>
-  <div class="form-group">
-    <label for="email">Email:</label>
-    <input type="email" class="form-control" id="pwd" placeholder="Enter password" name="email" required>
-    <div class="valid-feedback">Valid.</div>
-    <div class="invalid-feedback">Please fill out this field.</div>
-  </div>
+<div class="form-group">
+  <label>{{ f.label_tag }}:</label>
+    <p>{{f}}</p>
+</div>
 
 
- <div class="form-group">
-    <label for="text">Tell us:</label>
-  <textarea class="form-control" id="txt" name="text" required></textarea>
-  <div class="valid-feedback">Valid.</div>
-    <div class="invalid-feedback">Please fill out this field.</div>
-  </div>
+
+                    {% endfor %}
 
 
-  <button type="submit" class="btn btn-primary">Submit</button>
+
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
 </form>
+
+
+
+
 
 
      </div>
