--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@ width: 90px;
                     <h1>cse-44th</h1>
                     <p style="margin-left: 100px;">A website for students</p>
                     <hr>
-                    <a class="navbar-brand" href="index.php">
+                    <a class="navbar-brand" href="{% url 'home' %}">
                         <img src="{% static 'logo.png' %}" alt="Logo" style="width:100px;">
                     </a>
 
@@ -81,20 +81,34 @@ width: 90px;
 
 
                 <ul class="navbar-nav mr-auto nav justify-content-center ml-lg-5">
+
+                    <!---search bar -->
+
+
+                               <li class="nav-item pl-lg-3 pr-lg-3 mr-lg-5">
+
+                             <form method="get" action="{% url 'search' %}" class="form-inline my-2 my-lg-0"  >
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search">
+      <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
+    </form>
+
+
+
+                    </li>
+
+
+
+
+
                     <li class="nav-item pl-lg-3 pr-lg-3 mm">
                         <a class="nav-link " id="{% block hactive %}{% endblock hactive %}" href="/">Home<span class="sr-only">(current)</span></a>
                     </li>
 
-                    <li class="nav-item dropdown pl-lg-3 pr-lg-3 ">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                    <li class="nav-item dropdown pl-lg-3 pr-lg-3  ">
+                        <a class="nav-link dropdown-toggle disabled" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Post
                         </a>
-                        <div class="dropdown-menu edit-dropdown " aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Teacher</a>
-                            <a class="dropdown-item" href="#">CR</a>
-
-                        </div>
                     </li>
 
 
@@ -104,9 +118,8 @@ width: 90px;
                         <a class="nav-link" href="{% url 'aboutMe' %}">About Me</a>
                     </li>
                     <li class="nav-item pl-lg-3 pr-lg-3" id="{% block contactactive %}{% endblock contactactive %}">
-                        <a class="nav-link" href="/contact">Contact Us</a>
+                        <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
                     </li>
-<li>
 
        {% if user.is_authenticated %}
 
@@ -136,15 +149,8 @@ width: 90px;
 </button>
                     {% endif %}
 
-</li>
-
 
                 </ul>
-
-                <form method="get" action="{% url 'search' %}" class="form-inline my-2 my-lg-0"  >
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search">
-      <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
-    </form>
 
 
 
@@ -164,7 +170,7 @@ width: 90px;
 
       <!-- Modal Header -->
       <div class="modal-header">
-        <h4 class="modal-title"LogIn here</h4>
+        <h4 class="modal-title">LogIn here</h4>
         <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
 
@@ -185,7 +191,7 @@ width: 90px;
 
 
 
-      </div>
+
       <div class="modal-footer">
         <a  class="btn btn-primary"  href="{% url 'userSignUp' %}">Sign Up</a>
           {% csrf_token %}
@@ -193,8 +199,10 @@ width: 90px;
       </div>
 
         </form>
+
     </div>
   </div>
+</div>
 </div>
 
 {% for message in messages %}
