--- a/templates/home/search.html
+++ b/templates/home/search.html
@@ -23,12 +23,18 @@
         <!--col-1-->
    <div class="col-sm-8">
 
+       {% if allPosts|length < 1 %}
+
+       <h3 style="margin-top:40;">
+
+           there is no result
+
+
+       </h3>
+
+       {% else %}
 
     {% for post in allPosts %}
-
-
-
-
 
 
        <div class="card pt-4 pl-4 pb-4 pr-4">
@@ -73,6 +79,7 @@
 
 
        {% endfor %}
+       {% endif %}
 
 
 
