--- a/templates/base.html
+++ b/templates/base.html
@@ -100,7 +100,7 @@ width: 90px;
 
 
 
-                    <li class="nav-item pl-lg-3 pr-lg-3 mm">
+                    <li class="nav-item pl-lg-3 pr-lg-3 ml-lg-4">
                         <a class="nav-link " id="{% block hactive %}{% endblock hactive %}" href="/">Home<span class="sr-only">(current)</span></a>
                     </li>
 
@@ -114,9 +114,6 @@ width: 90px;
 
 
 
-                    <li class="nav-item pl-lg-3 pr-lg-3" id="{% block aboutactive %}{% endblock aboutactive %}">
-                        <a class="nav-link" href="{% url 'aboutMe' %}">About Me</a>
-                    </li>
                     <li class="nav-item pl-lg-3 pr-lg-3" id="{% block contactactive %}{% endblock contactactive %}">
                         <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
                     </li>
